# agentic-book

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
content/case-studies/: sql-agent-use-cases.md
content/checklists/: data-layer-readiness-checklists.md  sql-agent-enterprise-readiness.md
content/concepts/: mcp.md
content/glossary/: data-layer-glossary.md
content/patterns/: data-layer-access-security.md  data-layer-catalog.md  data-layer-classification-mcp.md  data-layer-data-quality.md  data-layer-decision-tree.md  data-layer-deployment-maturity.md  data-layer-governance-compliance.md  data-layer-ingestion-strategy.md  data-layer-production-operations.md  data-layer-rag-pipeline.md  hybrid-retrieval.md  sql-agent-access-patterns.md  sql-agent-api-wrappers.md  sql-agent-consumption-patterns.md  sql-agent-context-engineering.md  sql-agent-entity-resolution.md  sql-agent-mcp-serving.md  sql-agent-observability-evaluation.md  sql-agent-security-guardrails.md  sql-agent-semantic-layer.md
content/playbooks/: data-layer-handoff-to-agents.md  data-layer-playbook.md  mcp-consumption.md  sql-agent-enterprise-playbook.md  sql-agent-roadmap-maturity.md
content/risks/: data-layer-security-risk-register.md  sql-agent-risk-register.md
content/standards/: data-layer-if-then-rules.md
docker/: entrypoint.sh
docs/: architecture-recommendations.md  implementation-roadmap.md
docs/LLM_SQL/: playbook_sql_agents_mcp_accionable_v2.docx  (+1 more)
scripts/: ingest.ps1  ingest.sh  setup.ps1  setup.sh
(+67 files in other folders)
